--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1512,6 +1512,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -2919,13 +2922,23 @@ EncoderInertialCapture</property>
                                                             <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkCheckButton" id="checkbutton_rest">
-                                                            <property name="label" translatable="yes">Highlight rest</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
+                                                            <property name="tooltip" translatable="yes">Highlight rest</property>
                                                             <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             <signal name="clicked" handler="on_checkbutton_rest_clicked" swapped="no"/>
+                                                            <child>
+                                                            <widget class="GtkLabel" id="label261">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="xalign">0</property>
+                                                            <property name="label" translatable="yes">Highlight rest</property>
+                                                            <property name="ellipsize">end</property>
+                                                            <property name="width_chars">16</property>
+                                                            </widget>
+                                                            </child>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
@@ -21460,6 +21473,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
