--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1515,6 +1515,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -5560,7 +5563,7 @@ EncoderInertialCapture</property>
                                                             <widget class="GtkVBox" id="vbox15">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="spacing">14</property>
+                                                            <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkAlignment" id="alignment12">
                                                             <property name="visible">True</property>
@@ -21496,6 +21499,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
